2005-01-24  Jakub Steiner <jimmac@ximian.com>

	* 192x192/filesystems/gnome-fs-trash*: remove old icons. Vectors
	  in progress.

2005-01-20  Jakub Steiner <jimmac@ximian.com>

	* 16x16/filesystems/Makefile.am
	* 16x16/filesystems/gnome-fs-locally-shared.png
	* 16x16/filesystems/gnome-fs-share-private.png
	* 24x24/filesystems/Makefile.am
	* 24x24/filesystems/gnome-fs-locally-shared.png
	* 24x24/filesystems/gnome-fs-share-private.png
	* 24x24/filesystems/gnome-fs-share.png: network shares and locally shared
		folders.

2005-01-19  Jakub Steiner <jimmac@ximian.com>

	* 48x48/filesystems/gnome-fs-trash-empty.png
	* 48x48/filesystems/gnome-fs-trash-full.png
	* 32x32/filesystems/gnome-fs-trash-empty.png
	* 32x32/filesystems/gnome-fs-trash-full.png
	* 24x24/filesystems/gnome-fs-trash-empty.png
	* 24x24/filesystems/gnome-fs-trash-full.png
	* 16x16/filesystems/gnome-fs-trash-empty.png
	* 16x16/filesystems/gnome-fs-trash-full.png: new trash icons,
	  fixes bug #163848

2005-01-19  Jakub Steiner <jimmac@ximian.com>

	* 16x16/stock/generic/stock_leave-fullscreen.png:
	* 24x24/stock/generic/stock_leave-fullscreen.png: leave fullscreen mode,
	  fixes #164017

2005-01-10  Rodney Dawes  <dobey@novell.com>

	* NEWS, configure.in: Update for 2.9.3 release

	* 16x16/stock/media/Makefile.am:
	* 24x24/stock/media/Makefile.am: Add the new volume stock icons back
	as they are in CVS now

2005-01-03  Jakub Steiner <jimmac@ximian.com>

	* {16x16,24x24}/stock/media/stock_volume*: screwed up a lot of
	  things just before leaving for vacation
	
2004-12-07 Garrett LeSage <garrett@novell.com>

	* 48x48/stock/object/Makefile.am
	* 48x48/stock/object/stock_insert-floating-frame.png: 
	Add 48x48 version of stock_insert-floating-frame (generic window)

2004-12-01  Rodney Dawes  <dobey@novell.com>

	* 16x16/stock/media/Makefile.am:
	* 24x24/stock/media/Makefile.am: Revert previous commit
	The files weren't actually added to CVS

2004-11-30  Jakub Steiner <jimmac@ximian.com>
