@@ -1,3 +1,10 @@
+2005-01-24  Rodney Dawes  <dobey@novell.com>
+
+	* 48x48/emblems/Makefile.am: Dist the icon.in files, and not only the
+	resulting generated icon files
+	Add emblem-distinguished.icon.in to the list of icon files
+	Add emblem-distinguished.png to the list of images
+
 2005-01-24  Jakub Steiner <jimmac@ximian.com>
 
 	* 192x192/filesystems/gnome-fs-trash*: remove old icons. Vectors
